--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
     <!-- Intro contents -->
     <div class="flex gap-10 justify-center mt-10 mx-auto w-[700px] h-16" >
         <img src="netflix_icon.png" alt="" class="h-14 hover:h-16 hover:cursor-pointer duration-200">
-        <!-- <img src="prime_icon.png" alt="" class="h-14 hover:h-16 hover:cursor-pointer duration-200">
+        <img src="prime_icon.png" alt="" class="h-14 hover:h-16 hover:cursor-pointer duration-200">
         <img src="youtube_icon.png" alt="" class="h-14 hover:h-16 hover:cursor-pointer duration-200">
-        <img src="imdb_icon.png" alt="" class="h-14 hover:h-16 hover:cursor-pointer duration-200"> -->
+        <img src="imdb_icon.png" alt="" class="h-14 hover:h-16 hover:cursor-pointer duration-200">
     </div>
 
     <!-- Movie search content -->
-    <div class="flex w-[700px] mx-auto mt-10">
+    <div class="flex w-[700px] mx-auto mt-5">
         <input id="movieName" type="text" class="w-[560px] p-3 bg-gray-300" placeholder="Enter a movie name">
         <button id="search" class="w-[140px] bg-red-600 p-3">Search Movie</button>
     </div>
